# parallel_computing

cuda/: Makefile  image_scaling.cu  reduction.cu
cudaReduction/: Makefile  reduction.cu
cuda_reduction/: MakeFile  Run.sh  reduction  reduction.cu
mpi/: CMakeLists.txt  Run.sh  reduccionMPI  reduccionMPI.cc
